[package]
name = "clump"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
ignore = "0.4"
regex = "1.9"
tempfile = "3.8"
walkdir = "2.4"
serde_json = "1.0"
serde = "1.0"
tree-sitter = "0.24"
streaming-iterator = "0.1.9"

# language parsers
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
